test/parse/expr/bad-getlocal-too-many.txt
;;; ERROR: 1
(module (func (local $foo f64)
  (get_local $foo (nop))))
(;; STDERR ;;;
parse/expr/bad-getlocal-too-many.txt:3:19: syntax error, unexpected (, expecting )
  (get_local $foo (nop))))
                  ^
;;; STDERR ;;)
